--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
 python:
   - 3.8
 before_install:
-  - docker-compose up -d -f docker-compose-test.yml
+  - docker-compose -f docker-compose-test.yml up -d
   - python --version
   - pip install -r requirements.txt
   - pip install -r requirements-travis.txt
