--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - python --version
   - pip install -r requirements.txt
   - pip install -r requirements-travis.txt
-  - export PYTHONPATH="${PYTHONPATH}:backup_server"
+  - export PYTHONPATH="${PYTHONPATH}:tp2_utils_package"
 script: pytest --cov=.
 after_success:
   - coveralls
