--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,18 +16,6 @@ services:
       timeout: 30s
       retries: 3
 
-  json_producer_script:
-    container_name: json_producer_script
-    image: json_producer_script:latest
-    entrypoint: python3 /__main__.py
-    networks:
-      - tp2_net
-    volumes:
-      - ./data:/data
-    depends_on:
-      - rabbitmq
-    restart: on-failure
-
   initial_review_consumer:
     container_name: initial_review_consumer
     image: consumer_producer_service:latest
@@ -148,6 +136,30 @@ services:
       - rabbitmq
     restart: on-failure
 
+  funny_reviews_city_count:
+    container_name: funny_reviews_city_count
+    image: consumer_producer_service:latest
+    entrypoint: python3 /__main__.py --config /configs/funny_reviews_city_count.yml
+    networks:
+      - tp2_net
+    volumes:
+      - ./configs:/configs
+    depends_on:
+      - rabbitmq
+    restart: on-failure
+
+  filter_top_10_funny_cities:
+    container_name: filter_top_10_funny_cities
+    image: consumer_producer_service:latest
+    entrypoint: python3 /__main__.py --config /configs/filter_top_10_funny_cities.yml
+    networks:
+      - tp2_net
+    volumes:
+      - ./configs:/configs
+    depends_on:
+      - rabbitmq
+    restart: on-failure
+
   business_download_service:
     container_name: business_download_service
     image: business_download_service:latest
@@ -155,6 +167,8 @@ services:
     environment:
       - PORT=2222
       - LISTEN_BACKLOG=3
+      - RABBIT_HOST=rabbit
+      - CLIENTS=2
     networks:
       - tp2_net
     volumes:
@@ -170,7 +184,8 @@ services:
       - DOWNLOADER_HOST=business_download_service
       - DOWNLOADER_PORT=2222
       - JOIN_FROM_QUEUE=yelp_business_funny_reviews_count
-      - OUTPUT_JOINED_QUEUE=yelp_business_funny_reviews_city_count
+      - OUTPUT_JOINED_QUEUE=yelp_business_funny_reviews_city_count_consumer
+      - RABBIT_HOST=rabbit
     networks:
       - tp2_net
     volumes:
