Multiple streams in library

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -156,7 +156,7 @@ services:
       - PORT=2222
       - LISTEN_BACKLOG=3
       - RABBIT_HOST=rabbit
-      - CLIENTS=2
+      - CLIENTS=1
     networks:
       - tp2_net
     volumes:
@@ -166,6 +166,7 @@ services:
     restart: on-failure
 
   business_joiner_service:
+    container_name: business_joiner_service
     image: business_joiner_service:latest
     entrypoint: python3 /__main__.py
     environment:
@@ -181,8 +182,6 @@ services:
     depends_on:
       - rabbitmq
     restart: on-failure
-    deploy:
-      replicas: 2
 
 volumes:
   rabbitmq_data:
