Flush state bugfix

--- a/test_dockerfile/Dockerfile
+++ b/test_dockerfile/Dockerfile
@@ -3,4 +3,4 @@ COPY . /repo
 WORKDIR /repo
 RUN pip install -r requirements.txt
 RUN pip install -r requirements-travis.txt
-CMD  export PYTHONPATH="${PYTHONPATH}:tp2_utils_package" && pytest --cov=. && coveralls
+CMD  export PYTHONPATH="${PYTHONPATH}:tp2_utils_package" && pytest -s --cov=. && coveralls
