--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
       - tp2_net
     volumes:
       - ./configs:/configs
+      - ./volumes/day_histogram_calculator:/data_volume
     depends_on:
       - rabbitmq
     restart: on-failure
