--- a/configs/day_histogram_calculator.yml
+++ b/configs/day_histogram_calculator.yml
@@ -23,6 +23,7 @@ message_pipeline:
 
 message_pipeline_kwargs:
   data_path: /data_volume/message_pipeline
+  signature: day_histogram_calculator
 
 message_set_params:
   set_data_path: /data_volume/message_set
