--- a/configs/user_stats_calculator_shard3.yml
+++ b/configs/user_stats_calculator_shard3.yml
@@ -32,3 +32,10 @@ operations:
 
 message_pipeline:
   - GroupByUser
+
+message_pipeline_kwargs:
+  data_path: /data_volume/message_pipeline
+  signature: user_stats_calculator_shard3
+
+message_set_params:
+  set_data_path: /data_volume/message_set
