--- a/configs/user_stats_filter_50_and_5_stars.yml
+++ b/configs/user_stats_filter_50_and_5_stars.yml
@@ -32,3 +32,7 @@ message_pipeline:
 message_pipeline_kwargs:
   ends_to_receive: 3
   ends_to_send: 1
+  signature: user_stats_filter_50_and_5_stars
+
+message_set_params:
+  set_data_path: /data_volume/message_set
