--- a/configs/top_10_count_by_city.yml
+++ b/configs/top_10_count_by_city.yml
@@ -33,3 +33,9 @@ message_pipeline:
 message_pipeline_kwargs:
   ends_to_receive: 1
   ends_to_send: 1
+  data_path: /data_volume/message_pipeline
+  signature: top_10_count_by_city
+  commits_until_save: 10
+
+message_set_params:
+  set_data_path: /data_volume/message_set
