--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,8 @@ services:
       - tp2_net
     volumes:
       - ./configs:/configs
-      - ./volumes/day_histogram_calculator:/data_volume
+      - day_histogram_calculator_message_pipeline:/data_volume/message_pipeline
+      - day_histogram_calculator_message_set:/data_volume/message_set
     depends_on:
       - rabbitmq
     restart: on-failure
@@ -49,6 +50,7 @@ services:
       - tp2_net
     volumes:
       - ./configs:/configs
+      - user_stats_calculator_sharderer:/data_volume/message_set
     depends_on:
       - rabbitmq
     restart: on-failure
@@ -61,7 +63,8 @@ services:
       - tp2_net
     volumes:
       - ./configs:/configs
-      - ./volumes/user_stats_calculator_shard1:/data_volume
+      - user_stats_calculator_shard1_message_pipeline:/data_volume/message_pipeline
+      - user_stats_calculator_shard1_message_set:/data_volume/message_set
     depends_on:
       - rabbitmq
     restart: on-failure
@@ -74,7 +77,8 @@ services:
       - tp2_net
     volumes:
       - ./configs:/configs
-      - ./volumes/user_stats_calculator_shard2:/data_volume
+      - user_stats_calculator_shard2_message_pipeline:/data_volume/message_pipeline
+      - user_stats_calculator_shard2_message_set:/data_volume/message_set
     depends_on:
       - rabbitmq
     restart: on-failure
@@ -87,7 +91,8 @@ services:
       - tp2_net
     volumes:
       - ./configs:/configs
-      - ./volumes/user_stats_calculator_shard3:/data_volume
+      - user_stats_calculator_shard3_message_pipeline:/data_volume/message_pipeline
+      - user_stats_calculator_shard3_message_set:/data_volume/message_set
     depends_on:
       - rabbitmq
     restart: on-failure
@@ -100,6 +105,7 @@ services:
       - tp2_net
     volumes:
       - ./configs:/configs
+      - user_stats_filter_5_and_unique_text:/data_volume/message_set
     depends_on:
       - rabbitmq
     restart: on-failure
@@ -112,6 +118,7 @@ services:
       - tp2_net
     volumes:
       - ./configs:/configs
+      - user_stats_filter_50:/data_volume/message_set
     depends_on:
       - rabbitmq
     restart: on-failure
@@ -124,6 +131,7 @@ services:
       - tp2_net
     volumes:
       - ./configs:/configs
+      - user_stats_filter_50_and_5_stars:/data_volume/message_set
     depends_on:
       - rabbitmq
     restart: on-failure
@@ -136,6 +144,8 @@ services:
       - tp2_net
     volumes:
       - ./configs:/configs
+      - reviews_funny_counter_message_pipeline:/data_volume/message_pipeline
+      - reviews_funny_counter_message_set:/data_volume/message_set
     depends_on:
       - rabbitmq
     restart: on-failure
@@ -148,6 +158,8 @@ services:
       - tp2_net
     volumes:
       - ./configs:/configs
+      - top_10_count_by_city_message_pipeline:/data_volume/message_pipeline
+      - top_10_count_by_city_message_set:/data_volume/message_set
     depends_on:
       - rabbitmq
     restart: on-failure
@@ -164,7 +176,7 @@ services:
     networks:
       - tp2_net
     volumes:
-      - ./volumes/download_service_data:/data
+      - download_service_data:/data
     depends_on:
       - rabbitmq
     restart: on-failure
@@ -182,13 +194,31 @@ services:
     networks:
       - tp2_net
     volumes:
-      - ./volumes/joiner_service_data:/data
+      - joiner_service_data:/data
     depends_on:
       - rabbitmq
     restart: on-failure
 
 volumes:
   rabbitmq_data:
+  joiner_service_data:
+  download_service_data:
+  user_stats_calculator_shard1_message_pipeline:
+  user_stats_calculator_shard1_message_set:
+  user_stats_calculator_shard2_message_pipeline:
+  user_stats_calculator_shard2_message_set:
+  user_stats_calculator_shard3_message_pipeline:
+  user_stats_calculator_shard3_message_set:
+  day_histogram_calculator_message_pipeline:
+  day_histogram_calculator_message_set:
+  user_stats_filter_5_and_unique_text:
+  user_stats_filter_50:
+  user_stats_filter_50_and_5_stars:
+  user_stats_calculator_sharderer:
+  top_10_count_by_city_message_pipeline:
+  top_10_count_by_city_message_set:
+  reviews_funny_counter_message_pipeline:
+  reviews_funny_counter_message_set:
 networks:
   tp2_net:
     ipam:
